<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="300dp"
    android:layout_height="420dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/cardview"
    app:cardCornerRadius="22dp"
    app:cardBackgroundColor="#EEFFFFFF">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qsign"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:elevation="0dp"
            tools:targetApi="lollipop"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:id="@+id/linear1"
            android:elevation="8dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:paddingStart="15dp"
            android:textSize="16sp"
            android:textColor="#B20E2EE4"
            android:id="@+id/questionType"
            android:layout_marginTop="15dp"
            tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/questionview"
                style="@style/questionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:text="@string/myquestions" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="9dp"
            android:weightSum="4"
            >
            <TextView
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="@string/answers"
                android:textSize="16sp"
                android:id="@+id/answersprovided"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/views"
                android:textSize="16sp"
                android:id="@+id/viewofquestion"/>
        </LinearLayout>
        <LinearLayout
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            tools:ignore="RelativeOverlap"
            tools:targetApi="lollipop">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageofuser"
                android:background="@drawable/image_holder"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="17sp"
                    android:id="@+id/questionby"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="#questiontyoe"
                    android:id="@+id/usernameof"
                    tools:ignore="HardcodedText"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>